CH revisions to ch6

--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -1,7 +1,7 @@
 # DISCUSSION AND RECOMMENDATIONS FOR FUTURE WORK {#recommendations}
 
 ## KEY UNCERTAINTIES THAT AFFECT LRP ESTIMATES
-<!--CH: this section is a TOR element-->
+
 
 ### CU assessments
 
@@ -17,8 +17,10 @@ Structural uncertainty in stock-recruitment models underlying benchmark estimati
 
 Uncertainties in percentile-based benchmarks can be calculated from bootstrapped confidence intervals of benchmarks accounting for autocorrelation in spawner abundances [@peacockEvaluatingConsequencesCommon2020; @holtEvaluatingBenchmarksBiological2018]. Uncertainties in their implementation can arise because of uncertainties in estimates of productivity and harvest rates that are used to categorize populations to identify appropriate percentiles to use [as described in  @holtEvaluatingBenchmarksBiological2018]. 
 
-Uncertainties in benchmarks derived from the watershed-area model can be approximated using bootstrapped 95% confidence intervals [@parkenHabitatbasedMethodsEstimate2006]. Because the watershed-area model was parameterized based on a meta-analysis of spawner-recruit data sets that were outdated (ending in 2000) and likely more productive compared with for populations in our case study, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. 
-<!--CH comment to CW: Catarina, now that you've reminded me about the delta method, I'm not sure I estimated CIs correctly here. I used 95%CI of SREP (capacity) from TMB outputs, and then used a distribution of productivity from expert opinion (leaning on Wilf's life-stage model) and drew randomly from both to get a bootstrapped 95% CI of Sgen, where Sgen is F(Srep, prod). Is this okay mathematically?-->
+Uncertainties in benchmarks derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006; liermannUsingAccessibleWatershed2010] were approximated using bootstrapped 95% confidence intervals . Because the watershed-area model was parameterized based on a meta-analysis of spawner-recruit data sets that were outdated (ending in 2000) and likely more productive compared with for populations in our case study, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. 
+<!--CH comment to CW: Catarina, now that you've reminded me about the delta method, I'm not sure I estimated CIs correctly here. I used 95%CI of SREP (capacity) from TMB outputs, and then used a distribution of productivity from expert opinion (leaning on Wilf's life-stage model) and drew randomly from both to get a bootstrapped 95% CI of Sgen, where Sgen is F(Srep, prod). Is this okay mathematically?
+CH: not it's not, but have used 95%CIS to apprpoximate credible intervals for now...
+-->
 
 Uncertainties in peer-reviewed WSP assessments are captured qualitatively through narratives associated with each CU assessment [e.g., @dfoWildSalmonPolicy2015] derived from experts integrating uncertainties in data and estimation of benchmarks and reconciling conflicting metrics. This process requires careful consideration of expertise included to ensure that best available information is incorporated in assessments and associated description of uncertainties.  
 
@@ -48,7 +50,6 @@ For logistic regression-based LRPs derived from CU assessments that are independ
 
 Projection-based LRPs explicitly account for underlying uncertainties in population and harvest parameters, such as CU-level productivity and capacity, age-structure, covariance in recruitment deviations, and variability in implementation of fixed exploitation strategies over time and among CUs. The inclusion of structural uncertainty in the form of the stock-recruitment relationship is demonstrated for the case study on Interior Fraser Coho. We recommend a thorough review of assumptions and either including them directly in random sampling in projections or including them as sensitivity analyses.
 One caveat of this approach is that the LRP depends on the management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies, which is not uncommon among Pacific salmon SMUs. Projection-based LRPs derived in this way cannot be used to assess status if management procedures changes. 
-<!--CH: mention "structural uncertainty included through model ensemble approaches" in pgh above-->
 
 Similar to proportion-based LRPs, uncertainties in projection-based LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by data-rich CUs that are included. Further details on assumptions that are required for projection-based LRPs and conditions when they may be considered are described in Section \@ref(guidelines). 
 
@@ -66,21 +67,21 @@ For logistic regression-based LRPs, we found that removing component CUs from as
 
 ## TIME-VARYING PARAMETERS AND IMPACTS ON LRPS
 
-There is increasing evidence of time varying parameters in Pacific salmon populations, particularly relating to trends in productivity [@dornerSpatialTemporalPatterns2018; @malickRegionalScaleDeclinesProductivity2016; @petermanWidespreadDecreaseProductivity2012]. <!--CW note: it is probably better to group/ describe these papers a bit more, or exclude some of them. CH: I suggest removing these:  @holtImpactTimevaryingProductivity2020;  @connorsClimateCompetitionInfluence2020; @debertinMarineGrowthPatterns2017 --> In Canada, DFO assessments identified declines in productivity for various CUs, e.g., Fraser River Sockeye [@grantEvaluationUncertaintyFraser2011;  @huangRecoveryPotentialAssessment2021], Southern BC Chinook [@dfoIntegratedBiologicalStatus2016], and Interior Fraser River Coho [@arbeiderInteriorFraserCoho2020]. These assessments relied on a variety of tools to identify trends in productivity including the evaluation of trends in recruits per spawner <!--CH: I changed this from: "log spawners per recruit", okay? I'm not sure the logged scale is critically relevant, but the R/S vs S/R is important---> [@arbeiderInteriorFraserCoho2020], evaluation of trends in residuals from recruitment curve fits [@grantEvaluationUncertaintyFraser2011], and explicit consideration of time-varying parameters when fitting recruitment curves using Kalman filter or recursive Bayes approaches [@huangRecoveryPotentialAssessment2021]. 
+There is increasing evidence of time varying parameters in Pacific salmon populations, particularly relating to trends in productivity [@dornerSpatialTemporalPatterns2018; @malickRegionalScaleDeclinesProductivity2016; @petermanWidespreadDecreaseProductivity2012]. In Canada, DFO assessments identified declines in productivity for various CUs, e.g., Fraser River Sockeye [@grantEvaluationUncertaintyFraser2011;  @huangRecoveryPotentialAssessment2021], Southern BC Chinook [@dfoIntegratedBiologicalStatus2016], and Interior Fraser River Coho [@arbeiderInteriorFraserCoho2020]. These assessments relied on a variety of tools to identify trends in productivity including the evaluation of trends in recruits per spawner [@arbeiderInteriorFraserCoho2020], evaluation of trends in residuals from recruitment curve fits [@grantEvaluationUncertaintyFraser2011], and explicit consideration of time-varying parameters when fitting recruitment curves using Kalman filter or recursive Bayes approaches [@huangRecoveryPotentialAssessment2021]. 
 
 Time-varying recruitment parameters affect estimates for salmon benchmarks [e.g., S\textsubscript{MSY} and S\textsubscript{gen}, @holtImpactTimevaryingProductivity2020] and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations [e.g., percentile-based benchmarks, @holtEvaluatingBenchmarksBiological2018]. Analytical methods for time-varying reference points have been proposed for other marine fish species [@amarEvaluationTwoManagement2009; @puntFisheriesManagementClimate2014], some of which have been evaluated empirically and in simulation with mixed results [@olearyComparisonMultipleApproaches2020; @bergerCharacterTemporalVariability2019]. However, determining support for time-varying parameters is not always straightforward. Common statistical diagnosis such as inspection of residuals and use of information criteria (e.g., AIC and BIC) often produce conflicting results [@holtImpactTimevaryingProductivity2020].  @bergerCharacterTemporalVariability2019 suggests that dynamic reference points that track changes in underlying population proceses are most useful in situations when stock productivity shifts directionally and the productivity signal is correctly ascertained. In contrast, uncertainty from incorrectly identifying productivity trends can be a major source of inaccuracy in stock status [@bergerCharacterTemporalVariability2019]. 
 
-In a review of stock-recruit analyses for Pacific salmon, including the use of environmental covariates and time-varying parameters, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in salmon populations it is not clear if reference points should be adjusted accordingly. <!--CH addition next sentence--> Where stock depletion is associated with time-varying parameters that are thought be reversible, it may be more appropriate to protect the population from harvest by maintaining high reference points using historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommend that changes to the reference points should only be adjusted when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Furthermore, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available" [@dfoFisheryDecisionMakingFramework2009]. This information can help identify if reductions in productivity are likely to be irreversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluating the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations. 
+In a review of stock-recruit analyses for Pacific salmon, including the use of environmental covariates and time-varying parameters, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in salmon populations it is not clear if reference points should be adjusted accordingly.  Where stock depletion is associated with time-varying parameters that are thought be reversible, it may be more appropriate to protect the population from harvest by maintaining high reference points using historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommend that changes to the reference points should only be adjusted when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Furthermore, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available" [@dfoFisheryDecisionMakingFramework2009]. This information can help identify if reductions in productivity are likely to be irreversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluating the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations. 
 
 Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to bias in stock status [@holtImpactTimevaryingProductivity2020] and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every conservation unit where trends are suspected due to limited resources. Future research should focus on identifying general advice on the best practices for adjusting benchmarks when stock dynamics are thought to be non-stationary.   
  
 
-Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change<!-- in recruitment parameters-->, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity were introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
+Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity were introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
 
 
 
 
-## FUTURE RESEARCH
+## FUTURE RESEARCH & RECOMMENDATIONS
 
 Here we identify three approaches for developing LRPs aligned with the key principles in Section \@ref(principles). Additional approaches may be developed in the future to capture a broader range of data availability, quality, and types, and dimensions of biological status. As methods are developed and revised, SMU statuses can also be updated in accordance with principle 2, using the best available information for the development of LRPs. 
 
@@ -104,10 +105,12 @@ When applying methods to specific case studies, we recommend that aggregate abun
 
 
 <!--CW: this last paragraph does not read as research recommendation, but as LRP recommendation, I am not sure it belongs here.
-Also I don't think that the fact that we did not recommend a probability level for the aggregate abundance-based LRP is a problem. Science will still work on producing tha logistic/projecton-based model, then Management+science+stakeholders will work on setting the probability and time frame for the objective.-->
+Also I don't think that the fact that we did not recommend a probability level for the aggregate abundance-based LRP is a problem. Science will still work on producing tha logistic/projecton-based model, then Management+science+stakeholders will work on setting the probability and time frame for the objective.
+
+CH: I've changed the title of the section to "Future research and recommendations" so that this point can be captured. I think it's our recommendation to policy/FM to work with us to sort it out, as required. Do you think it could be done on a case by case basis, e.g., one SMU at 50% another at 66%, another at 90%?.-->
 
 
-Although, @dfoScienceAdvicePrecautionary2021 recommends that LRPs under Fish Stock provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above red status that aligned with scientific principles. Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options may be <!--is?--> required. <!--CW -I am not sure if the probability level is part of the LRP. I think it is part of the objective, and as such, it should not be determined by science. LW: related to comments in Ch 4, re: probability higher than 0.5 --> Alternatively, proportion-based LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance-based LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportion-based LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time-frame identified within the objective are identified with managers and stakeholders. When used as part of Management Procedure Framework (e.g.,  @dfoManagementProcedureFramework2021) or management strategy evaluation (MSE), the performance of a variety of management procedures against objectives can be evaluated, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportion-based LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers and stakeholders.
+Although, @dfoScienceAdvicePrecautionary2021 recommends that LRPs under Fish Stock provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above red status that aligned with scientific principles. Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options is required. <!--CW -I am not sure if the probability level is part of the LRP. I think it is part of the objective, and as such, it should not be determined by science. LW: related to comments in Ch 4, re: probability higher than 0.5 --> Alternatively, proportion-based LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance-based LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportion-based LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time-frame identified within the objective are identified with managers and stakeholders. When used as part of Management Procedure Framework (e.g.,  @dfoManagementProcedureFramework2021) or management strategy evaluation (MSE), the performance of a variety of management procedures against objectives can be evaluated, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportion-based LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers and stakeholders.
 
 
 
