--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -7,15 +7,11 @@ output:
 
 <!-- # Add a comment in colour: *\textcolor{cyan}{LW: some text}* -->
 
-<!-- Initials: my comment -->
-
 ## CONTEXT
 
 
 The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of Chum Salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island [Figure \@ref(fig:chum-map); @holtbyConservationUnitsPacific2007]. This area includes deep fjords, glaciers, large rivers, and small coastal streams. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. 
-  
-  
-<!-- LW: added line breaks because it wasn't making a new paragraph with figure placement--> 
+
 
 
 ```{r chum-map, fig.cap="The seven Conservation Units that make up the Inside South Coast Chum Stock Management Unit (not including Lower Fraser and Fraser Canyon Conservation Units).", warning=FALSE, echo=FALSE, fig.align="center"}
@@ -23,16 +19,16 @@ knitr::include_graphics("figure/chum-map.png")
 ```
 
 
-The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival [although there are some scale/growth data in @debertinMarineGrowthPatterns2017]. Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU <!--KH: between years 19xx and 20xx-->, with declines in the north, especially in the region defined by <!-- the --> Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed integrated <!--WSP?--> status assessment has not been developed for ISC chum. <!--LW: Does @godboutStockStatusWild2004 not count as a full status assessment? CW:I think it is not a WSP assessment. CH: correct,  Godbout et al. was developed pre-WSP-->  
+The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival [although there are some scale/growth data in @debertinMarineGrowthPatterns2017]. Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004 identified long-term increases or variable abundance in Georgia Strait and Howe Sound-Burrard Inlet and declines in Northeast Vancouver Island and especially in the Southern Coastal Streams CU (from 1953-2002). @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed integrated WSP status assessment has not been developed for ISC chum.
 
 
-<!--CH: Suggestion to revised the first sentence to: "Holt et al. (in review) provide steps for applying LRPs to salmon SMUs, one of which is to identify if the status of data-deficient CUs within the SMU can be represented by other data-rich CUs."-->Step 3 of the Guidelines for Applying LRPs gives guidance on what evidence would be required to use known status of some CUs for other CUs that are data-limited. This is relevant for the ISC Chum case study because two CUs have no observations in some years (Upper Knight and Bute Inlet). For data deficient CUs to be represented by CUs with data, there needs to be evidence that the data deficient CUs have similar threats, environmental drivers, biological characteristics, and population <!--CH note: I changed habitat capacity to population capacity in Guidelines Paper, and all Case studies--> capacity as CUs with sufficient data. <!-- CH: suggest to only include footnote at first instance in the WP, at least for now: ^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> <!--CW: do we need to include the section?(Guidelines paper, Section 4.1.3). CH: No, I think it's okay to leave out the section when refering to the other WP-->
+Holt et al. (in review) provide steps for applying LRPs to salmon SMUs, one of which is to identify if the status of data-deficient CUs can be represented by other data-rich CUs. This is relevant for the ISC Chum case study because two CUs have no observations in some years (Upper Knight and Bute Inlet). For data deficient CUs to be represented by CUs with data, there needs to be evidence that the data deficient CUs have similar threats, environmental drivers, biological characteristics, and population capacity as CUs with sufficient data.
 
 
 Upper Knight and Bute Inlet CUs are both associated with long fjords that run from the Broughton Archipelago through the Coast Mountains. They include rivers with headwaters in the Cariboo region farther inland than other CUs in the SMU (Figure \@ref(fig:chum-map)). Southern Coastal Streams, Georgia Strait, and Howe Sound-Burrard Inlet also include portions of the Coast Mountains and some glaciers, but to a lesser extent and their inlets are shorter and their watersheds do not go as far inland. Upper Knight and Bute Inlet are unique in that they are the only CUs in the SMU that only include watersheds that drain into the upper end of long inlets. They are both more remote than the other CUs, which is part of why there are fewer observations. <!-- LW: check with PVW if this is true--> 
 
 
-Chum from these two CUs <!--KH: suggestion to re-state 2 CU names since new paragraph; or, move to include in above paragraph--> are exposed to different threats to habitat, survival and productivity than the other five CUs. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. The glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event<!--CH: I was curious and had to look that one up; interesteing!-->. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Generally, it is known that competition with other salmon in the ocean and ocean conditions [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a] affect chum salmon in this SMU. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and low productivity years<!--CH suggest omitting next phrase, as I'm not sure how boom & bust is different from very high and low values with high variability; we didn't do a formal analysis for cyclic patterns: ", and boom and bust cycles of abundance"-->. These CUs also have lower habitat capacity, with fewer streams with Chum spawners than the other CUs (Table \@ref(tab:CU-summary)).<!--LW: check with PVW if this is just fewer monitored streams--> Based on these differences, the burden of proof is not met, and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be borrowed for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. <!-- KH: Suggestion to move this next sentence to the discussion / lessons learned section; it seems out of place here --> In other SMUs where the quality of data differs for a subset of CUs, careful consideration should be given to whether abundance, productivity, and their trends can be reliably estimated using data from CUs with data of higher quality.
+Chum from the Upper Knight and Bute Inlet CUs are exposed to different threats to habitat, survival and productivity than the other five CUs in both the fresh water and the early marine phase. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. The glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event<!--CH: I was curious and had to look that one up; interesteing!-->. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in near shore marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and low productivity years. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, the burden of proof is not met, and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be borrowed for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
 
 
 ```{r CU-summary, echo=FALSE}
@@ -45,9 +41,10 @@ csasdown::csas_table(d,
             #)
 ```
 
-<!-- LW: should alpha and exploitation rate be added to this table as justification for which percentile benchmarks were chosed? Also available in Holt et al. 2018.
+<!-- LW: should alpha and exploitation rate be added to this table as justification for which percentile benchmarks were chosen? Also available in Holt et al. 2018.
   CW: I suggest removin the UBM estimates, as we do not use them. And I like the idea of adding alpha and ER.
   KH: Do the UBM ever get used in the Salmon Scanner tool? If so, you could leave, but if not, remove.  Also - I like the idea of including the productivity and ER values (even if a range) used to justify which percentile to use.
+  LW: We do use the UBM for the salmon scanner tool. 
   
 -->
 
@@ -74,7 +71,7 @@ For this case study, we consider two approaches for characterizing CU status:
 (2) CU-level abundance relative to a percentile lower benchmark.
 
 
-The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)) (Pestal et al. in prep.) is consistent with Canada's WSP and is recommended by Holt *et al.* (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.
+The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)) (Pestal et al. in prep.) is consistent with Canada's WSP and is recommended by Holt et al. (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.
 
 
 When applying the Salmon Scanner to ISC Chum, we used percentile benchmarks as both upper and lower benchmarks <!--KH: suggestion to add "...when they were available for a CU. For CUs in which percentile benchmarks were not available, the Salmon Scanner tool used trends in spawner abundance as a basis for assessing CU status" --> (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend <!--at least partially(?) --> on percentile-based benchmarks.
@@ -338,6 +335,9 @@ We were not able to estimate aggregate abundance logistic regression LRPs for IS
 
 
 The CUs that were missing observations in some years and required CU-level infilling (Upper Knight and Bute Inlet) were not used in the aggregate abundance LRP analysis because the assumption that escapement is correlated between CUs ignores diversity between CUs and the potential for uncorrelated escapements. <!-- CH suggest adding: "Unlike proportion-based LRPS, for aggregate abundance-based LRPs, we did not consider status based on the Salmon Scanner which that does not require infilling."--> It should also be noted that these two CUs do not represent a random subset of the seven CUs in the Inside South Coast Chum SMU, as noted in the Context section. <!--KH: could refresh people's memory on why they are not random -. e.g. these two CUs were identified as being less representative of other CUs within the SMU due to ..... --> 
+
+<!-- LW: moved from context:
+KH: Suggestion to move this next sentence to the discussion / lessons learned section; it seems out of place here --> In other SMUs where the quality of data differs for a subset of CUs, careful consideration should be given to whether abundance, productivity, and their trends can be reliably estimated using data from CUs with data of higher quality.
 
 <!--CH: remove
     LW: I think it is an important result/point of discussion that you can have a good logistic fit up to a point and then it breaks down in subsequent years. Maybe this could get moved somewhere else? Is it covered elsewhere, eg., guidelines paper?
