--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -1,8 +1,4 @@
----
-output:
-  word_document: default
-  html_document: default
----
+
 # GUIDELINES FOR APPLYING LRPS {#guidelines}
 
 <!--CH: could change list level as this next section is the only one at that level, but then need to capitalize all level 2 title
@@ -120,28 +116,27 @@ Because WSP Integrated status assessments are resources-intensive processes invo
 
 Given a proportion-based LRP of 100% of CUs above red status, when data deficient CUs are represented by CUs with data we refer to resulting status as 'interim' when all CUs included in assessment are above red status (Table \@ref(tab:GuidanceDDCUs2)). This 'interim status' is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the four criteria listed above are met, which underscores the value of monitoring and assessing all component CUs. Where data deficient CUs are not represented by CUs with data, and all CUs included in the assessment are above red status, then the SMU is considered data deficient and SMU status cannot be evaluated. In both cases, we recommend improved monitoring to fill CU-level assessment gaps.
 
-When data are missing for one or more CUs, and at least one of data-rich CUs have red status, the LRP of 100% CUs above the red zone is considered breached, regardless of whether the data-deficient CUs are represented by data-rich CUs or not (Table \@ref(tab:GuidanceDDCUs2)). A breach of the LRP (i.e., at least one CU with red status) can be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above red status). Further monitoring of data-deficient CUs is still warranted in this case to inform status of remaining components of the SMU and associated rebuilding efforts. 
+When data are missing for one or more CUs, and at least one of data-rich CUs have red status, the LRP of 100% CUs above the red zone is considered breached, regardless of whether the data-deficient CUs are represented by data-rich CUs or not <!--(Table \@ref(tab:GuidanceDDCUs2))-->. A breach of the LRP (i.e., at least one CU with red status) can be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above red status). Further monitoring of data-deficient CUs is still warranted in this case to inform status of remaining components of the SMU and associated rebuilding efforts. 
 
 
-<!--
+
 \renewcommand*{\arraystretch}{1.6}
 \begin{longtable}[]{p{5cm} p{3.5cm} p{3.5cm}}
 \caption{Guidelines on assessing status for proportion-based LRPs of 100\% of CUs being above red status, when at least one CU is data-deficient}\\
 \hline
- & Status of data-rich CUs &  \\ 
+ & Status of data-rich CUs: all above red status &  Status of data-rich CUs: at least one red status \\ 
 \hline
- & All above red status & At least one red status \\ 
- \hline
 \endhead
 Status of data-deficient CUs can be inferred from data-rich CUs  &  Interim SMU status above LRPs & SMU Status = below LRP\\
-Status of data-deficient CUs cannot be inferred from data-rich CUs  &  SMU Status = Data Deficient & SMU Status = below LRP\\
+Status of data-deficient CUs {\it cannot} be inferred from data-rich CUs  &  SMU Status = Data Deficient & SMU Status = below LRP\\
 
 \hline
 (\#tab:GuidanceDDCUs)
 \end{longtable}
 
--->
 
+
+<!--
 +--------------------------+-------------------------+-------------------------+
 |                          | Status of data-rich CUs:| Status of data-rich CUs:                         
 |                          | all above red status    | at least one red status 
@@ -157,6 +152,8 @@ Status of data-deficient CUs cannot be inferred from data-rich CUs  &  SMU Statu
 
 
 Table: (\#tab:GuidanceDDCUs2) Guidelines on assessing status for proportion-based LRPs of 100\% of CUs being above red status, when at least one CU is data-deficient. 
+
+-->
 
 <!--CW: From the PA Policy:
 
@@ -221,10 +218,6 @@ In the context described here, aggregate abundance-based LRPs are scientifically
 
 Aggregate abundance-based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above red status) is identified. We recommend applying a probability of at least 50% of all CUs being above red status to align with WSP objectives. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010], instead of specifying a single probability because we could not identify a scientific basis for the choice (see Section \@ref(logisticMethods)). 
 
-Future applications of this Step 8 when setting LRPs may want to consider the relevance of probability thresholds for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50$\%$ probability or if the projected stock status indicator falls below the LRP with a greater than 50$\%$ probability under a zero catch scenario in a 1 year projection". While using a 50% probability threshold of one or more CUs having red status is not directly analagous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm. In our case studies, we provide logistic regression-based LRPs for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above red. This approach to delineating serious harm could be considered risk neutral, where risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives.    
-
-
-
 
 \renewcommand*{\arraystretch}{1.6}
 \begin{longtable}[]{p{3.7cm} p{6.3cm}}
@@ -240,6 +233,12 @@ $>$ 99\%  &  virtually certain that all CUs are above their lower benchmark\\
 \hline
 (\#tab:LikelihoodsIPCC)
 \end{longtable}
+
+
+
+Future applications of this Step 8 when setting LRPs may want to consider the relevance of probability thresholds for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50$% probability threshold of one or more CUs having red status is not directly analagous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm. In our case studies, we provide logistic regression-based LRPs for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above red. This approach to delineating serious harm could be considered risk neutral, where risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives.    
+
+
 
 
 
